# libvwpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: QPSimulators.h  common.h  common_formulation.h  feet.h  formulations.h  models.h  qp.h  trunk_orientation.h  vision_utils.h
python_bindings/: QPHomograpyTest.py
src/: QPHomograpy.cpp  QPSimulators.cpp  common.cpp  common_formulation.cpp  essential.cpp  factory.cpp  feet.cpp  herdt.cpp  homography.cpp  models.cpp  qp.cpp  test1.cpp  test2.cpp  trunk_orientation.cpp  vision_utils.cpp  visualfeaturebase.cpp
tools/: automatic_ejecution.py  circle.py  esential_symbolic_python.py  homo_symbolic_python.py  mpc_matrices.py  numeric_homography.py  optimizer.py  optimizer2.py  plot_results.py  plot_results_p27.py  rotations.py  symbolic_homography.py
working_configs/essential/: diagonal.ini  hrp2_diagonal_experiment_1.ini  hrp_elineal_1.ini  hrp_elineal_2.ini  hrp_elineal_3.ini  hrp_elineal_4.ini
working_configs/essential-nonlinear/: diagonal.ini  diagonal_u0.ini  hrp2_diagonal_u0.ini  single-essential-x-axis-straight.ini
working_configs/herdt/: x-axis.ini  y-axis.ini
working_configs/homography/: hrp_hlineal_1.ini  hrp_hlineal_2.ini  hrp_hlineal_3_21.ini  hrp_hlineal_3_22.ini  hrp_hlineal_3_23.ini  hrp_hlineal_3_41.ini  hrp_hlineal_3_42.ini  hrp_hlineal_3_43.ini  hrp_hlineal_4.ini  hrp_hlineal_5.ini  hrp_hlineal_6.ini  hrp_hlineal_7.ini  hrp_hlineal_8.ini  hrp_hlineal_9.ini  hrp_hlineal_navigation.ini  jvrc_simulated_x-axis-straight.ini  nao_simulated_x-axis-straight.ini  single_homography-x-axis-straight.ini  single_real_homography-x-axis-straight.ini
working_configs/homography-nonlinear/: diagonal.ini  diagonal_u0.ini  hrp_hnlineal_u0.ini
working_configs/multi-homoraphy/: multi.ini
